factory/static/stylesheets/sass/main.sass
//@import "compass/reset"
//@import "compass"
@import "_settings.sass"
//@import "foundation"
//@include foundation-everything(true)
//@include foundation-flex-grid;
//@include foundation-flex-classes;
@import "foundation.css"
@import "_typography.sass"


$main-color: #FCFCFC
$secondary-color: #DEDEDC
$nav-color: #4C413B

@mixin logo($height, $imgurl, $position, $bgsize)
	height: $height
	background-image: url($imgurl)
	background-repeat: no-repeat
	background-position: $position
	background-size: $bgsize
	position: relative
	display: flex
	min-width: 100%
	min-height: 100%
	overflow: hidden

nav 
	background-color: $nav-color
	max-height: 60px

main 
	background-color: $main-color
	padding: 20px

footer 
	background-color: $nav-color
	padding: 20px 

article
	background-color: $secondary-color
	padding-top: 5px

.article-box
	margin-top: 5px
	margin-bottom: 5px

.text-right
	text-align: right

.text-left
	text-align: left

.text-center
	text-align: center

.text-end
	text-align: end

.starlogo
	@include logo(50px, "../../img/9pointedstar.png", center, 50px 50px)

.icon
	padding: 5px
	color: $font-color-contrast

.register
	padding-left: 10px
	width: 122px

.search
	height: 1.5em

.plain-list
	list-style: none
	margin-left: 0px

.off-canvas
	background-color: $nav-color

.off-canvas-menu-item
	background-color: $nav-color
	border-bottom: 1px solid $font-color-primary
	padding: 15px
	a
		color: $main-color
		text-decoration: none
	&:hover
			background-color: $font-color-primary
.login
	text-align: center
	background-color: $primary-color

.tab-img
	padding-left: 8px
	padding-right: 0px

.footer-row
	margin-right: 20px
	margin-left: 20px
	max-width: inherit

.copyright 
	font-size: 0.9em
	padding: 10px

/* Messages */

.summary
	padding-left: 10px
	padding-right: 10px
	

@media only screen and (min-width: 48em) //phones
	.starlogo
		@include logo(50px, "../../img/BahaiFaithwithStar.png", center, 200px 40px)
	.footeraddress
		text-align: center

@media only screen and (min-width: 62em) //tablets
	.starlogo
		@include logo(50px, "../../img/BahaiFaithwithStar.png", center, 200px 40px)

@media only screen and (min-width: 75em) //laptops and desktops
	.starlogo
		@include logo(50px, "../../img/BahaiFaithwithStar.png", center, 200px 40px)

